--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>WebP to JPEG Converter</title>
-    <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
-    <script defer src="https://pyscript.net/latest/pyscript.js"></script>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <title>WebP to JPEG Converter</title>
+        <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
+        <py-env>
+            - pillow
+        </py-env>
+        <script defer src="https://pyscript.net/latest/pyscript.js"></script>
+    </head>
+    
 <body>
 
 <h1>WebP to JPEG Converter</h1>
