--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <script src="https://cdn.jsdelivr.net/pyodide/v0.23.2/full/pyodide.js"></script>
     <script type="text/javascript">
         window.addEventListener('load', async function() {
-            // Initialize Pyodide
+            // Initialize Pyodide and set it on the window object to ensure global access
             window.pyodide = await loadPyodide({
                 indexURL: "https://cdn.jsdelivr.net/pyodide/v0.23.2/full/"
             });
             console.log("Pyodide loaded successfully.");
 
             // Load the Pillow package
-            await pyodide.loadPackage(['pillow']);
+            await window.pyodide.loadPackage(['pillow']);
             console.log("Pillow loaded successfully.");
         });
     </script>
